[3단계 - 관리자 기능 보호] feat: 관리자 역할을 추가한다. 일반 멤버와 관리자 멤버를 구분한다.